@@ -23,11 +23,20 @@
 
 #include <rivendell/rd_schedcodes.h>
 
+#ifdef __cplusplus
+extern "C" {
+#endif  // __cplusplug
+
 int RD_ListCartSchedCodes(struct rd_schedcodes *schedcodes[],
 		  	const char hostname[],
 			const char username[],
 			const char passwd[],
 			const unsigned cartnum,
 			unsigned *numrecs);
+
+
+#ifdef __cplusplus
+}
+#endif  // _cplusplus
 
 #endif  // RD_LISTCARTSCHEDCODES_H
