@@ -21,6 +21,10 @@
 #ifndef RD_TRIMAUDIO_H
 #define RD_TRIMAUDIO_H
 
+#ifdef __cplusplus
+extern "C" {
+#endif  // __cplusplug
+
 struct rd_trimaudio {
   unsigned cart_number;
   unsigned cut_number;
@@ -38,5 +42,9 @@ int RD_TrimAudio(struct rd_trimaudio *trimaudio[],
 			const int trimlevel,
 			unsigned *numrecs);
 
+
+#ifdef __cplusplus
+}
+#endif  // _cplusplus
 
 #endif  // RD_TRIMAUDIO_H
